[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "walytis_beta_embedded"
version = "0.0.5"
description = "A lightweight, flexible, non-linear blockchain."
readme = {file = "ReadMe.md", content-type = "text/markdown"}
requires-python = ">=3.6"
authors = [
    {name = "emendir"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://ipfs.io/ipns/k2k4r8nismm5mmgrox2fci816xvj4l4cudnuc55gkfoealjuiaexbsup/Sites/BrenthyAndWalytis/"
Github = "https://github.com/emendir/BrenthyAndWalytis"
# Source Code on IPNS = "https://ipfs.io/ipns/k2k4r8k7h909zdodsvbxe32sahpfdkqcqqn1npblummw4df6iv7dj5xh"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
