[build-system]
requires = ["setuptools", "toml"] # toml included because it is used by version.py to read the package version
build-backend = "setuptools.build_meta"

[project]
name = "brenthy_docker"
version = "0.3.2"
description="Interact with docker containers running IPFS and Brenthy."
dependencies = [
  "docker",
  "ipfs-toolkit",
  "termcolor",
  "pyperclip",
]
readme = "brenthy_docker/ReadMe.md"
keywords = ["brenthy", "walytis", "docker", "test"]

[project.urls]
Github = "https://github.com/emendir/BrenthyAndWalytis/tree/master/tests/brenthy_docker/brenthy_docker/ReadMe.md"
Homepage = "https://ipfs.io/ipns/emendir.tech/#BrenthyAndWalytis/tests/brenthy_docker/brenthy_docker/ReadMe.md"
IPNS = "https://ipfs.io/ipns/emendir.tech/#BrenthyAndWalytis/tests/brenthy_docker/brenthy_docker/ReadMe.md"


[tool.setuptools.packages.find]
where = ["."]
include = ["brenthy_docker"]
namespaces = false

