
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies", "version"]
name = "walytis_beta_api"
authors = [{ name = "emendir" }]
description = "A library for interacting with Walytis, a flexible, lightweight, nonlinear blockchain. Built to be built upon."
readme = {file = "ReadMe.md", content-type = "text/markdown"}

[tool.setuptools.dynamic]
dependencies = {file = ["src/requirements.txt"]}
version = {attr= "walytis_beta_tools.versions._WALYTIS_BETA_API_VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["walytis_beta_api","walytis_beta_api._experimental", "walytis_beta_tools", "walytis_beta_tools._experimental"]
namespaces = false 
